[package]
edition = "2021"
name = "aptos-indexer-node-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = [
  "napi6",
  "tokio_rt",
] }
napi-derive = "2.12.2"
futures = "0.3"
aptos-protos = { git = "https://github.com/aptos-labs/aptos-core.git", tag = "aptos-node-v1.12.1" }
tonic = { version = "0.11.0", features = [
  "tls",
  "tls-roots",
  "transport",
  "prost",
  "gzip",
  "codegen",
  "zstd",
] }
num_cpus = "1.0"
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
lazy_static = "1.5.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
